<resources>
    <string name="app_name">Сапёр</string>
    <string name="btn_play">Играть</string>
    <string name="text_bombs">Количество бомб:</string>
    <string name="text_rows">Количество строк:</string>
    <string name="text_columns">Количество столбцов:</string>
    <string name="you_win">Вы выиграли</string>
    <string name="you_lose">Вы проиграли</string>
    <string name="game_over">Игра окончена</string>
    <string name="retry">Заново</string>
    <string name="easy">Простой</string>
    <string name="medium">Средний</string>
    <string name="hard">Сложный</string>
    <string-array name="game_mods_array">
        <item>@string/easy</item>
        <item>@string/medium</item>
        <item>@string/hard</item>
    </string-array>
    <string name="to_menu">В меню</string>
    <string name="btn_desc">Описание</string>
    <string name="desc_intro">Сапер — это игра головоломка, где игроку нужно разминировать минное поле, помечая флажками ячейки, на которых могут быть мины, для их обнаружения на соседних пустых клетках есть подсказки в виде чисел. Многие не знают, как играть в Сапера, они нажимают на ячейки наугад, а им открываются какие-то числа, что они значат и для чего они нужны, мало кто догадывается. Прочитав до конца эту небольшую пошаговую инструкцию, как играть в сапера, ты поймешь как нужно правильно играть в Сапера, и, возможно, полюбишь эту игру.</string>
    <string name="desc_rules_title">Правила игры в Сапера</string>
    <string name="desc_first_steps_subtitle">Открываем первые ячейки</string>
    <string name="desc_first_steps_text">Игра начнется, когда ты откроешь первую ячейку. Многие пытаются вначале открыть сразу несколько клеток, клацая случайно по минному полю. Если открылось несколько ячеек, тогда уже можно оценить ситуацию. Чтобы открыть клетку в нашей игре, нужно сделать долгий клик, и она откроется.</string>
    <string name="desc_nums_subtitle">Что значат числа в Сапере</string>
    <string name="desc_nums_text">Числа в Сапере — это наши подсказки, они нам говорят сколько и где расположено мин. Например, ячейка с числом 1 говорит нам, что вокруг нее, вверху, внизу, слева, справа и по диагонали, находится только 1 мина. Ячейка с числом 2 говорит нам, что вокруг нее две мины, число 3 означает, что вокруг клетки 3 мины и так далее.</string>
    <string name="desc_bombs_subtitle">Помечаем мины</string>
    <string name="desc_bombs_text">Когда обнаружили мину, пометьте ее флажком, для этого нужно просто кликнуть на ячейку без всяких задержек, где предположительно может быть мина, и появится флажок. Когда мы определили расположение мин, нажимаем на те ячейке, где их не должно быть.</string>
    <string name="desc_open_subtitle">Открываем все ячейки</string>
    <string name="desc_open_text">Смотрите на все открывшиеся нам числа и определяем, где могут располагаться мины. Если двойка значит вокруг две мины, тройка значит три мины и так далее, пока не пометим все мины и не откроем все свободные клетки.</string>
    <string name="desc_conclusion">Логическая игра «Сапер» отлично подходит для развития умственного мышления. Фанаты этой игры между собой соревнуются, разминируя минное поле на время.</string>
    <string name="player_hint">Введите имя</string>
    <string name="btn_top">Топ</string>
    <string name="clear">Очистить</string>
    <string name="guest">Гость</string>
</resources>
