<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/prettyPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            style="@style/plainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_intro"/>

        <TextView
            style="@style/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_rules_title" />

        <TextView
            style="@style/subtitleTextAfterTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_first_steps_subtitle" />

        <TextView
            style="@style/plainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_first_steps_text" />

        <TextView
            style="@style/subtitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_nums_subtitle" />

        <TextView
            style="@style/plainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_nums_text" />

        <TextView
            style="@style/subtitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_bombs_subtitle" />

        <TextView
            style="@style/plainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_bombs_text" />

        <TextView
            style="@style/subtitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_open_subtitle" />

        <TextView
            style="@style/plainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_open_text" />

        <TextView
            style="@style/plainTextWithoutSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_conclusion" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>