<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/gameMode_spinner"
        style="@style/prettyMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/player"
        style="@style/prettyMargin"
        android:maxLines="1"
        android:lines="1"
        android:inputType="text"
        android:hint="@string/player_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameMode_spinner" />

    <Button
        android:id="@+id/btn_desc"
        style="@style/prettyMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_play"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_play"
        style="@style/prettyMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_top"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_desc" />

    <Button
        android:id="@+id/btn_top"
        style="@style/prettyMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_play" />

</androidx.constraintlayout.widget.ConstraintLayout>